learned more about Inquirer so fixing prompts

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   },
   "dependencies": {
     "yeoman-generator": "~0.14.0",
-    "lodash": "~2.4.1",
-    "async": "~0.2.9"
+    "lodash": "~2.4.1"
   },
   "devDependencies": {
     "mocha": "~1.14.0"
