--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "generator-helper",
-  "version": "0.1.2",
-  "description": "Yeoman generator for handlebars helper that can easily be used with Assemble.",
+  "version": "0.2.0",
+  "description": "Yeoman generator for handlebars or lodash helpers.",
   "keywords": [
-    "yeoman-generator",
+    "generator",
     "assemble",
     "handlebars",
+    "lodash",
     "helper"
   ],
   "homepage": "https://github.com/assemble/generator-helper",
   "bugs": "https://github.com/assemble/generator-helper/issues",
-  "author": {
-    "name": "Brian Woodward",
-    "email": "brian.woodward@gmail.com",
-    "url": "https://github.com/doowb"
-  },
+  "author": "Brian Woodward <brian.woodward@gmail.com> (https://github.com/doowb)",
+  "contributors": [
+    "Patrick Burtchaell <patrick@pburtchaell.com> (http://pburtchaell.com)"
+  ],
   "main": "app/index.js",
   "repository": {
     "type": "git",
@@ -28,10 +28,9 @@
     "lodash": "~2.4.1"
   },
   "devDependencies": {
-    "mocha": "~1.17.1",
-    "grunt-readme": "~0.4.5",
-    "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.8.0"
+    "gulp": "^3.8.6",
+    "gulp-verb": "^0.3.0",
+    "slugify": "^0.1.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0"
